<resources>
    <string name="app_name">PUBG Companion</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_overview">Overview</string>
    <string name="title_matches">Matches</string>
    <string name="title_maps">Maps</string>
    <string name="prompt_player_name">Enter Your PUBG Name</string>
    <string name="prompt_search">Search</string>

    <string name="menu_search">Search</string>
    <string name="menu_nearby_friends">Nearby Players</string>
    <string name="menu_settings">Settings</string>

    <string name="modes_prompt">Select Game Mode</string>

    <string-array name="modes_values">
        <item>Solo</item>
        <item>Solo FPP</item>
        <item>Duo</item>
        <item>Duo FPP</item>
        <item>Squad</item>
        <item>Squad FPP</item>
    </string-array>

    <string name="title_activity_nearby_friends">Nearby Friends</string>

    <string name="no_connection">No Connection Available !</string>

    <string name="prompt_ok">OK</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_player_search">Enter a player name to search</string>

    <string name="map_sanhok">Sanhok</string>
    <string name="map_miramar">Miramar</string>
    <string name="map_erangel">Erangel</string>
    <string name="mode">Mode</string>
    <string name="season">Season</string>
    <string name="games">Games</string>
    <string name="wins">Wins</string>
    <string name="top_10">Top 10</string>
    <string name="kd">K/D</string>
    <string name="avg_damage">Avg. Damage</string>
    <string name="date">2 days ago</string>
    <string name="distance">Distance</string>
    <string name="damage">Damage</string>
    <string name="kills">Kills</string>

    <string name="game_mode">Game mode</string>

    <string name="default_value">0</string>

    <string name="teams_number">/100</string>

    <string name="add_widget">Add widget</string>
    <string name="no_recent_matches">No recent matches</string>

    <string name="admob_app_id">ca-app-pub-3194028862433939~1831163408</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="prompt_share_location">Would you like to share your location with other players ?</string>

</resources>
