<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:elevation="4dp"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/textView_games_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/games"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_wins_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/wins"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_top10_label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/top_10"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_games"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView_games_label"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/colorGames"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_wins"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_wins_label"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/colorWins"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_top10"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textView_top10_label"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/colorTop10"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>